CostalCloud/force-app/main/default/objects/Hinge__c.object
<CustomObject>
    <fields>
        <fullName>Backset__c</fullName>
        <label>Backset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-3/8”</fullName>
                </value>
                <value>
                    <fullName>2-3/4”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Hinges</relationshipLabel>
        <relationshipName>Hinges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hinge_Count__c</fullName>
        <label>Hinge Count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hinge_Radius__c</fullName>
        <label>Hinge Radius</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>1/4&quot;</fullName>
                </value>
                <value>
                    <fullName>1/2&quot;</fullName>
                </value>
                <value>
                    <fullName>5/8”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hinge_Size__c</fullName>
        <label>Hinge Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3”</fullName>
                </value>
                <value>
                    <fullName>3-1/2”</fullName>
                </value>
                <value>
                    <fullName>4”</fullName>
                </value>
                <value>
                    <fullName>4-1/2”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Hinges</relationshipLabel>
        <relationshipName>Hinges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hinge</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Hinge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hinges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>